# gatekeep-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/gatekeep/: __init__.py  cli.py  loader.py  personas.py
src/gatekeep/governance/: architecture.yaml  cost-control.yaml  security.yaml
src/gatekeep/personas/: personas.yaml
src/gatekeep/standards/cis-aws-2.0/: manifest.yaml
src/gatekeep/standards/gdpr/: breach-notification.yaml  consent.yaml  data-protection.yaml  manifest.yaml
src/gatekeep/standards/owasp-top10/: manifest.yaml  top10.yaml
src/gatekeep/standards/soc2/: security.yaml
standards/: versions.yaml
standards/cis-aws-2.0/: iam.yaml  logging.yaml  manifest.yaml
standards/gdpr/: data-subject-rights.yaml  manifest.yaml
standards/owasp-top10/: manifest.yaml
standards/soc2/: manifest.yaml
tests/: test_cli.py  test_loader.py  test_personas.py
