[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeep"
version = "1.0.0"
description = "AI-powered governance for development teams — policy-as-code with specialized personas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "fenderfonic"},
]
keywords = ["governance", "security", "ai", "code-review", "compliance", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
slack = ["slack-sdk>=3.23.0", "slack-bolt>=1.18.0"]
all = ["gatekeep[mcp,slack]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "build>=1.0",
]

[project.scripts]
gatekeep = "gatekeep.cli:cli"

[project.urls]
Homepage = "https://github.com/fenderfonic/gatekeep-oss"
Repository = "https://github.com/fenderfonic/gatekeep-oss"
Issues = "https://github.com/fenderfonic/gatekeep-oss/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gatekeep = [
    "governance/*.yaml",
    "personas/*.yaml",
    "standards/**/*.yaml",
    "py.typed",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
